--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form method="POST" action="/predict">
             <div class="form-group">
                 <label for="gender">เพศ:</label>
-                <select class="form-control" id="gender" name="gender" required>
+                <select class="form-control" id="gender" name="gender">
                     <option value="0">หญิง</option>
                     <option value="1">ชาย</option>
                 </select>
@@ -23,27 +23,27 @@
             </div>
             <div class="form-group">
                 <label for="hypertension">ภาวะความดันโลหิตสูง:</label>
-                <select class="form-control" id="hypertension" name="hypertension" required>
+                <select class="form-control" id="hypertension" name="hypertension">
                     <option value="0">ไม่มีภาวะความดันโลหิตสูง</option>
                     <option value="1">มีภาวะความดันโลหิตสูง</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="heart_disease">โรคหัวใจ:</label>
-                <select class="form-control" id="heart_disease" name="heart_disease" required>
+                <select class="form-control" id="heart_disease" name="heart_disease">
                     <option value="0">ไม่เป็นโรคหัวใจ</option>
                     <option value="1">เป็นโรคหัวใจ</option>
                 </select>
             </div>
             <div class="form-group">
                 <label for="married">สถานะการแต่งงาน:</label>
-                <select class="form-control" id="married" name="married" required>
+                <select class="form-control" id="married" name="married">
                     <option value="0">ยังไม่เคยแต่งงาน</option>
                     <option value="1">เคยแต่งงานแล้ว</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="avg_glucose_level">ค่าเฉลี่ยกลูโคส:</label>
+                <label for="avg_glucose_level">ค่าเฉลี่ยนกลูโคส:</label>
                 <input type="number" class="form-control" id="avg_glucose_level" name="avg_glucose_level" step="0.01" required>
             </div>
             <div class="form-group">
@@ -55,13 +55,11 @@
 
         <!-- แสดงผลการทำนาย -->
         {% if prediction %}
-        <div class="alert alert-info text-center mt-4">
-            <strong>ผลลัพธ์:</strong> {{ prediction }}
-        </div>
+        <h3 class="text-center mt-4">{{ prediction }}</h3>
         {% endif %}
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
